more _config.yml

--- a/views/_partial/livesubmission.ejs
+++ b/views/_partial/livesubmission.ejs
@@ -252,7 +252,7 @@ table .problem-title a {
 					}
 			    }
 			    $.jhunt.defaults = {
-			        ip: '140.112.31.208',
+			        ip: '<%- config.HOST.IP %>',
 			        reloadtime: 2000,		// 	how time to load 
 			        reloadsubmit: 5,
 			        loadsubmit: 20,		//	how #submission to load
