--- a/public/stylesheets/pure-release-0.6.0/slide-menu.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu.css
@@ -5,6 +5,7 @@ body {
 /* Custom */
 .content {
     font-family: "Times New Roman", "Open Sans Light", "Georgia", "Helvetica Neue", "Helvetica", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.7em;
 }
 .content .caption {
   color: #A4A4A4;
@@ -249,17 +250,17 @@ The content `<div>` is where all your content goes.
      padding: 2.5em 2em 0;
      border-bottom: 1px solid #eee;
  }
-    .header h1 {
-        margin: 0.2em 0;
-        font-size: 3em;
-        font-weight: 300;
-    }
-     .header h2 {
-        font-weight: 300;
-        color: #ccc;
-        padding: 0;
-        margin-top: 0;
-    }
+.header h1 {
+    margin: 0.2em 0;
+    font-size: 3em;
+    font-weight: 300;
+}
+ .header h2 {
+    font-weight: 300;
+    color: #ccc;
+    padding: 0;
+    margin-top: 0;
+}
 
 .content-subhead {
     margin: 20px 0 20px 0;
