--- a/views/_partial/ranklist.ejs
+++ b/views/_partial/ranklist.ejs
@@ -32,7 +32,7 @@ table .motto span {
 		</thead>
 		<tbody>
 			<% var rl = rank_list, rank = 1; %>
-			<% for (var i = 0; i < rl.length; i++) { %>
+			<% for (var i = 0; rl && i < rl.length; i++) { %>
 				<% if( i !== 0 && rl[i].slv < rl[i-1].slv ) rank++; %>
 				<tr class='<%- i%2 == 0 ? "pure-table-odd" : "" %>'>
 					<td><%- rank %></td>
