--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -40,18 +40,6 @@
 	                <li class="pure-menu-item">
 						<a id="timer" class="pure-menu-link"></a>
 					</li>
-	                <li class="pure-menu-item">
-					<a class="pure-menu-link" href="#"><i class="fa fa-globe"></i> Lang <i class="fa fa-caret-down"></i></a>
-					<li class="pure-menu-item">
-						<ul class="pure-menu-list">
-							<li class="pure-menu-item">
-								<a class="pure-menu-link" href="/i18n/zhtw"><i class="fa fa-globe"></i> zhtw</a>
-							</li>
-							<li class="pure-menu-item">
-								<a class="pure-menu-link" href="/i18n/en"><i class="fa fa-globe"></i> en</a>
-							</li>
-						</ul>
-					</li>
 	            </ul>
 	        </div>
 	        <div class="pure-menu">
@@ -87,6 +75,21 @@
 					</ul>
 				</li>
 			<% } %>
+				<li class="pure-menu-item">
+					<input type="checkbox" id="box-1">
+					<label for="box-1" class="pure-menu-item">
+					<span class="pure-menu-link"><i class="fa fa-globe"></i> Lang <i class="fa fa-caret-down"></i></span></label>
+					<div>
+						<ul class="pure-menu-list">
+							<li class="pure-menu-item">
+								<a class="pure-menu-link" href="/i18n/zhtw"><i class="fa fa-globe"></i> zhtw</a>
+							</li>
+							<li class="pure-menu-item">
+								<a class="pure-menu-link" href="/i18n/en"><i class="fa fa-globe"></i> en</a>
+							</li>
+						</ul>
+					</div>
+				</li>
 	            </ul>
 	        </div>
 	    </div>
