fixed highlight page link

--- a/views/_partial/highlight.ejs
+++ b/views/_partial/highlight.ejs
@@ -8,7 +8,7 @@
 <div class="pure-menu pure-menu-horizontal">
 
 <ul class="pure-menu-list">
-  <li class="pure-menu-item"><a class="pure-menu-link" href="/source/<%- subs_info.pid %>" target="_blank" style="text-decoration: none; font-family: Consolas, Bitstream Vera Sans Mono, Courier New, Courier, monospace !important;"><i class="fa fa-file"></i> plain</a></li>
+  <li class="pure-menu-item"><a class="pure-menu-link" href="/source/<%- subs_info.sid %>" target="_blank" style="text-decoration: none; font-family: Consolas, Bitstream Vera Sans Mono, Courier New, Courier, monospace !important;"><i class="fa fa-file"></i> plain</a></li>
   <li class="pure-menu-item"><a class="pure-menu-link" href="/problem/<%= subs_info.cid %>/<%- subs_info.pid %>" target="_blank" style="text-decoration: none; font-family: Consolas, Bitstream Vera Sans Mono, Courier New, Courier, monospace !important;"><i class="fa fa-file"></i> <%= __('Problem') %></a></li>
 </ul>
 
