add student score page

--- a/views/admin/_partial/dashboard.ejs
+++ b/views/admin/_partial/dashboard.ejs
@@ -5,6 +5,5 @@
 <div class="content">
 	<%- include('../_partial/widget/nav')%>
 	<h2><%= __('Notice') %></h2>
-	<p>題目描述編輯、公告描述編輯功能支持</p>
-	<p>考試部份目前只提供檢視</p>
+	<p>測資上傳仍未實作，請手動部屬檔案</p>
 </div>
