--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -22,6 +22,8 @@
             <%- include('../admin/_partial/newcontest') %>
           <% } else if (layout == 'new_account') { %>
             <%- include('../admin/_partial/newaccount') %>
+          <% } else if (layout == 'new_grade') { %>
+            <%- include('../admin/_partial/newgrade') %>
           <% } %>
 </div>
 
