--- a/views/_partial/score.ejs
+++ b/views/_partial/score.ejs
@@ -64,7 +64,9 @@
 			var tbody = score.tbody;
 		%>
 		<% for (var i in thead) { %>
-			<th data-type="int" data-sortable="true" data-name="<%= thead[i].ttl %>"><%- thead[i].ttl %></th>
+			<th data-type="int" data-sortable="true" data-name="<%= thead[i].ttl %>">
+				<%- thead[i].ttl %>
+			</th>
 		<% } %>
         <th data-type="int" data-sortable="true" data-name="Avg.">Avg.</th>
 	</tr>
