--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -16,6 +16,8 @@
             <%- include('../admin/_partial/problem') %>
           <% } else if (layout == 'edit_contest') { %>
             <%- include('../admin/_partial/contest') %>
+          <% } else if (layout == 'edit_gradettl') { %>
+            <%- include('../admin/_partial/gradettl') %>
           <% } else if (layout == 'new_problem') { %>
             <%- include('../admin/_partial/newproblem') %>
           <% } else if (layout == 'new_contest') { %>
