--- a/views/admin/_partial/newgrade.ejs
+++ b/views/admin/_partial/newgrade.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-	<h1 class='article-title'><%= __('Add Account') %></h1>
+	<h1 class='article-title'><%= __('Add Exam Title') %></h1>
     <h2>Administrator</h2>
 </div>
 <div class="content">
