--- a/views/_partial/problem.ejs
+++ b/views/_partial/problem.ejs
@@ -84,7 +84,7 @@ var unitConvert = site.unitConvert;
 	    	<% for (var i in testdata_config) { %>
 	    		<% var testset = testdata_config[i]; %>
 	    		<li class="pure-menu-item">
-	    			<a href="https://github.com/JudgeGirl/JG-testdata/blob/master/practice/<%- pid %>/<%- testset[1][0] %>" class="pure-menu-link" style="padding: 0em 0.1em;">
+	    			<a href="<%- site.HOST.testdata %><%- pid %>/<%- testset[1][0] %>" class="pure-menu-link" style="padding: 0em 0.1em;">
 	    			<%- __('Subtask') %> <%- (parseInt(i)) %> (<%- testset[0] %>%): <%- config.unitConvert('cpu', testset[1][2]*1024) %>, <%- config.unitConvert('mem', testset[1][3]) %>
 	    			</a>
 	    		</li>
