--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -38,7 +38,7 @@
 	                <li class="pure-menu-item"><a href="/ranklist" class="pure-menu-link"><i class="fa fa-trophy"></i> <%= __('Rank') %></a></li>
 	                <li class="pure-menu-item"><a href="/contests" class="pure-menu-link"><i class="fa fa-flag"></i> <%= __('Contest') %></a></li>
 	                <li class="pure-menu-item">
-						<a id="timer" class="pure-menu-link"></a>
+						<a id="timer" class="pure-menu-link"> 00:00:00</a>
 					</li>
 	            </ul>
 	        </div>
@@ -58,7 +58,7 @@
 							<a class="pure-menu-link" href="/user/<%- user.uid %>"><i class="fa fa-tasks"></i> <%= __('Status') %></a>
 						</li>
 						<li class="pure-menu-item">
-							<a class="pure-menu-link" href="/score"><i class="fa fa-tasks"></i> <%= __('Score') %></a>
+							<a class="pure-menu-link" href="/score"><i class="fa fa-database"></i> <%= __('Score') %></a>
 						</li>
 						<li>
 							<a class="pure-menu-link" href="/edit"><i class="fa fa-cogs"></i> <%= __('Profile') %></a>
