--- a/views/_partial/problems.ejs
+++ b/views/_partial/problems.ejs
@@ -49,7 +49,7 @@
 			<label for="search" style="position: absolute; left: 12px; top: -2px">
 				<i class="fa fa-search"></i> 
 			</label>
-			<input type="text" id="search" class="pure-input-rounded pure-input-1-2" placeholder='Search Problems, like :unsolved, :solved' style="padding-left: 36px; margin-top: 2px">
+			<input type="text" id="search" class="pure-input-rounded pure-input-1" placeholder='Search Problems, like :unsolved, :solved' style="padding-left: 36px; margin-top: 2px">
 		</form>
 	</div>
 </div>
