--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -10,7 +10,7 @@
   unicode-range: U+4E00-9FFF;
 }
 body {
-    color: white;
+    color: #999;
     background-color: #252423;
     font-family: "Times New Roman", "Georgia", "Helvetica Neue", "Helvetica", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -22,6 +22,8 @@ h1, h2, h3, h4 {
 }
 .content table thead {
   font-family: ChekiangShuKeSung, "Times New Roman", "Georgia", "Helvetica Neue", "Helvetica", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #007ACC;
+  color: white;
 }
 .video-container {
   position: relative;
@@ -523,9 +525,23 @@ a {
   color: #4183C4;
 }
 
-form textarea, input, select, option {
+.pure-form legend, .pure-form label {
+  color: #E0E0E0;
+}
+
+.pure-form textarea, .pure-form input {
     background-color: #343434;
 }
-form select option {
-    background: #343434;
+.pure-form select {
+    background: black;
+}
+.pure-button-primary, .pure-button-selected, a.pure-button-primary, a.pure-button-selected {
+    background-color: #1f8dd6;
+}
+abbr[title] {
+  border: none;
+}
+.pure-menu-active>.pure-menu-link,.pure-menu-link:hover,.pure-menu-link:focus {
+    background-color: #1f8dd6;
+    color: #E0E0E0;
 }
